syntax = "proto3";

import "ForceUpdateInfo.proto";
import "RegionInfo.proto";
import "StopServerInfo.proto";

option java_package = "org.sorapointa.proto";

message QueryCurrRegionHttpRsp {
  int32 retcode = 1;
  string msg = 2;
  RegionInfo region_info = 3;
  bytes client_secret_key = 11;
  bytes region_custom_config_encrypted = 12;
  bytes client_region_custom_config_encrypted = 13;
  oneof detail {
    ForceUpdateInfo force_update = 4;
    StopServerInfo stop_server = 5;
  }
}
