syntax = "proto3";

import "RegionSimpleInfo.proto";

option java_package = "org.sorapointa.proto";

message QueryRegionListHttpRsp {
  int32 retcode = 1;
  repeated RegionSimpleInfo region_list = 2;
  bytes client_secret_key = 5;
  bytes client_custom_config_encrypted = 6;
  bool enable_login_pc = 7;
}
